--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -403,7 +403,7 @@
 **** xref:6.4.1-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
 **** xref:6.4.1-release-notes.adoc#accompanying-premium-plugin-end-of-life-announcement[Accompanying Premium Plugin end-of-life announcement]
 **** xref:6.4.1-release-notes.adoc#accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
-**** xref:6.4.1-release-notes.adoc#improvement[Improvement]
+**** xref:6.4.1-release-notes.adoc#improvements[Improvements]
 **** xref:6.4.1-release-notes.adoc#additions[Additions]
 **** xref:6.4.1-release-notes.adoc#changes[Changes]
 **** xref:6.4.1-release-notes.adoc#bug-fixes[Bug fixes]
