--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -17,13 +17,13 @@ NOTE: This is the {productname} Community version changelog. For information abo
 === Added
 * New `tree` component that can be used in dialog body panel.
 * `renderUI` property in the `Theme` type can now return a `Promise<RenderResult>` instead of `RenderResult`.
-* New `isEditable` API to `editor.selection` that returns true or false if the current selection is editable.
-* New `isEditable` API to `editor.dom` that returns true or false if the specified node is editable.
-* New `setText` and `setIcon` methods added to menu button and toolbar button API.
+* New `editor.selection.isEditable` API method that returns whether the current selection is editable.
+* New `editor.dom.isEditable` API method that returns whether the specified node is editable.
+* New `setText` and `setIcon` methods added to menu button and toolbar button APIs.
 * New `highlight_on_focus` option which enables highlighting the content area on focus.
 * New `fontsizeinput` toolbar item which allows the user to set the size via input and also increase and decrease it with `+` and `-` buttons.
-* Added `skipFocus` option to the `ToggleToolbarDrawer` command to preserve focus.
-* New `font_size_input_default_unit` option allows entry of numbers without a unit in `fontsizeinput`. They are then parsed as the set unit. If `font_size_input_default_unit` is not set the default is `pt`.
+* Added `skip_focus` check to the ToggleToolbarDrawer command.
+* New `font_size_input_default_unit` option allows to use of numbers without a unit in `fontsizeinput` and have them parsed with the default unit, if it is not defined the default is `pt`.
 * New `group` and `togglebutton` in view.
 * New `togglebutton` in dialog footer buttons.
 * Added `toggleFullscreen` to dialog API.
@@ -41,31 +41,31 @@ NOTE: This is the {productname} Community version changelog. For information abo
 * Direct invalid child text nodes of list elements are now wrapped in list item elements.
 * Templates are now be parsed before preview and insertion to make preview consistent with inserted template content and prevent XSS.
 * Pressing backspace on an empty line now preserves formatting on the previous empty line.
-* Pressing enter inside the `inputfontsize` input field now moves focus back into the editor content.
+* Pressing enter inside the `fontsizeinput` input would not move the focus back into the editor content.
 * Drag and drop events for elements with a `contenteditable="false"` attribute now includes target element details.
 * Updated focus, active, and enabled colors of UI buttons for improved contrast against the UI color.
 
 === Changed
-* The `link` plugins context menu items no longer appears for links that include elements with a `contenteditable="false"` attribute.
+* The Link plugin's context menu items will no longer appear for `contenteditable="false"` links.
 * The formatting of elements with a `contenteditable="false"` attribute are no longer cloned to new cells when new table rows are created.
 * Changed the color of `@dialog-table-border-color`, and added right padding to the first cell of dialog table.
 
 === Fixed
-* Sometimes the editor would finish initializing before the silver theme would have finished loading.
+* Sometimes the editor would finish initializing before the theme would have finished loading.
 * The `searchreplace` modal closed incorrectly when clicking outside of the alert that pops up when no match is found.
 * The text color or background color picker toolbar buttons did not update when the text color or background color was changed using the equivalent commands in the Format menu.
 * The `onSetup` api function would not run when defining custom group toolbar button.
 * The foreground and background menu icons would not properly update to display the last used color.
-* Added new `setIconFill` function to `NestedMenuItemInstanceApi`.
-* Pasting links to text would sometimes not generate the correct undo stack in Safari.
-* Toolbar split buttons in `advlist` plugin now show the correct state when the cursor is in a checklist.
+* Added new `setIconFill` function to `editor.ui.addNestedMenuItem`.
+* Pasting links to text would sometimes not generate the correct undo stack on Safari.
+* Toolbar split buttons in Advanced List plugin to show the correct state when the cursor is in a checklist.
 * Dragging transparent elements into transparent block elements could produce invalid nesting of transparents.
 * The `editor.insertContent` API would insert contents inside elements with a `contenteditable="false"` attribute if the selection was inside the element.
 * Closing a dialog would scroll down the document in Safari.
 * Inline headers would not work in some situations when the editor was moved too far right horizontally.
 * Quick toolbars were incorrectly rendered during the dragging of elements with a `contenteditable="false"` attribute.
 * Selection of images, horizontal rules, tables or elements with a `contenteditable="false"` attribute was possible if they were within an element with a `contenteditable="false"` attribute.
-* Ranged deletion of formatted text using selection or a keyboard shortcut would sometimes cause Blink- and Webkit-based browsers to insert interpreted tags upon typing. This could result in inconsistent tags.
+* Ranged deletion of formatted text using selection or keyboard shortcut would sometimes cause Blink and Webkit browsers to recreate tags upon typing, which may result in inconsistent tags.
 * Visual characters were rendered inside elements with a `contenteditable="false"` attribute.
 * Lists with an element with a `contenteditable="false"` attribute as their root were incorrectly editable using list API commands, toolbar buttons and menu items.
 * Color picker dialog would not update the preview color if the hex input value was prefixed with the `#` character.
@@ -75,7 +75,7 @@ NOTE: This is the {productname} Community version changelog. For information abo
 * Textareas with scrollbars in dialogs would not render rounded corners correctly on some browsers.
 * It was possible to open links inside the editor if the editor root was an element with a `contenteditable="false"` attribute.
 * Inline boundary was rendered for boundary elements that had a `contenteditable="false"` attribute.
-* Clicking on a disabled split button will no longer call the `onAction` callback.
+* Clicking on a disabled split button would call the onAction callback.
 * The *Edit Link* dialog incorrectly retrieved the URL value when opened immediately after the link insertion.
 * The `ForwardDelete` and `Delete` editor commands were deleting content within elements with a `contenteditable="false"` attribute.
 * The Backspace and Forward Delete keys were deleting content within elements with a `contenteditable="false"` attribute.
