--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -75,7 +75,7 @@ NOTE: This is the {productname} Community version changelog. For information abo
 * Textareas with scrollbars in dialogs would not render rounded corners correctly on some browsers.
 * It was possible to open links inside the editor if the editor root was an element with a `contenteditable="false"` attribute.
 * Inline boundary was rendered for boundary elements that had a `contenteditable="false"` attribute.
-* Clicking on a disabled split button would call the onAction callback.
+* Clicking on a disabled split button would call the `onAction` callback.
 * The *Edit Link* dialog incorrectly retrieved the URL value when opened immediately after the link insertion.
 * The `ForwardDelete` and `Delete` editor commands were deleting content within elements with a `contenteditable="false"` attribute.
 * The Backspace and Forward Delete keys were deleting content within elements with a `contenteditable="false"` attribute.
