--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -8,17 +8,13 @@ NOTE: This is the {productname} Community version changelog. For information abo
 
 === Fixed
 
-* When dragging image elements and dropping the image in the editor the `dragend` event would sometimes not fire on firefox.
-* `deleteallconversations` menu item was enabled before any comments were added.
+* Selection was not correctly scrolled horizontally into view when using the selection.scrollIntoView API.
 * Menu buttons would have the Tabstopping behaviour in toolbar.
 * The editor would display a notification error when it fails to retirieve a blob image uri.
-* Menu buttons would have the Tabstopping behaviour in toolbar.
-* The `urlinput` dialog component would not open the typeahead dropdown when the input value was reset to an empty string.
-* Fixed the mouse pointer style from a text cursor to a default arrow pointer when hovering over the tree dialog component items.
-* Enabled variant of togglable `tox-button` and `tox-button--secondary` now supports `hover/active/focus/disabled` states.
-* Setting an invalid unit in the `fontsizeinput` would change it do the default value instead of reverting it back to the previous valid value.
-* Selection was not correctly scrolled horizontally into view when using the `selection.scrollIntoView` API.
-* Context toolbars displayed the incorrect status for the `advlist` plugin buttons.
+* Setting an invalid unit in the fontsizeinput would change it do the default value instead of reverting it back to the previous valid value.
+* The urlinput dialog component would not open the typeahead dropdown when the input value was reset to an empty string.
+* When dragging image elements and dropping the image in the editor the `dragend` event would sometimes not fire on firefox.
+* Context toolbars displayed the incorrect status for the advlist plugin buttons.
 
 == 6.4.1 - 2023-03-29
 
