--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -9,7 +9,7 @@ NOTE: This is the {productname} Community version changelog. For information abo
 === Fixed
 
 * Selection was not correctly scrolled horizontally into view when using the `selection.scrollIntoView` API.
-* Tab navigation no longer incorrectly stops at menu buttons within toolbar groups
+* Tab navigation no longer incorrectly stops at menu buttons within toolbar groups.
 * The editor displayed a notification error when it failed to retrieve a blob image uri.
 * Setting an invalid unit in the `fontsizeinput` changed it to the default value instead of reverting it to the previous, and valid, value.
 * The `urlinput` dialog component would not open the type-ahead dropdown when the input value was reset to an empty string.
