--- a/modules/ROOT/partials/events/tinymcespellchecker-events.adoc
+++ b/modules/ROOT/partials/events/tinymcespellchecker-events.adoc
@@ -9,4 +9,5 @@ The following events are provided by the xref:introduction-to-tiny-spellchecker.
 |SpellcheckStart |N/A |Fired when spellchecking is enabled.
 |SpellcheckEnd |N/A |Fired when spellchecking is disabled.
 |SpellcheckerLanguageChanged |`+{ language: string, prevLanguage: string }+` |Fired when the spellchecking language is changed.
+|SpellcheckerUpdated |`+{ spelling: SpellingUpdate }+` |Fired when the editor content is checked for misspellings and suggestions.
 |===
