--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -76,6 +76,16 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 // {productname} 6.4.2 also includes the following bug fixes:
 
+//The editor displayed a notification error when it failed to retrieve a blob image uri.
+
+== Context toolbars displayed the incorrect status for the advlist plugin buttons.
+
+In previous versions of {productname}, the `advlist` quickbar button handler setup varied from the setup for the `list` handler.
+
+As a consequence the `advlist` quickbar button would not talk to the correct status.
+
+To fix this, changes were made to align the setup handler for the `advlist` to match the settings for the `list` handler, which now ensures the status is correctly rendered.
+
 
 // [[security-fixes]]
 // == Security fixes
