--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -82,7 +82,7 @@ In previous versions of {productname} while hovering over tree dialog component 
 
 As a consequence, the mouse pointer would render as a text cursor rather than the default arrow pointer.
 
-In {productname} 6.4.2, the styles for tree component items have been updated to corrected this issue.
+In {productname} 6.4.2, the styles for tree component items have been updated to correct this issue.
 
 // [[security-fixes]]
 // == Security fixes
