--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -78,7 +78,7 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 === Fixed the mouse pointer style from a text cursor to a default arrow pointer when hovering over the tree dialog component items.
 
-In previous versions of {productname} while hovering over tree dialog component items, the mouse pointer style would render incorrectly.
+In previous versions of {productname}, while hovering over tree dialog component items, the mouse pointer style would render incorrectly.
 
 As a consequence, the mouse pointer would render as a text cursor rather than the default arrow pointer.
 
