--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -76,6 +76,15 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 // {productname} 6.4.2 also includes the following bug fixes:
 
+=== The image would not be inserted when the quickimage button was used on Chrome.
+
+In previous versions of {productname}, on MacOS Chrome, the editor `focusin` event would occur before the change event for a file input.
+
+As a consequence, images could not be inserted via `quickimage` button of quickbar plugin.
+
+To fix this, the handling of `focusin` events was delayed in order to give a time slot for the change event to be handled.
+
+As a result, the `quickimage` button functionality in {productname} 6.4.2, has now been returned to its working state.
 
 // [[security-fixes]]
 // == Security fixes
