DOC-1959: Redial would, in some situations, cause select elements not to have an initial value selected when they should have. (#2686)
* DOC-1959: Redial would, in some situations, cause select elements not to have an initial value selected when they should have.

* Update modules/ROOT/pages/6.4.2-release-notes.adoc

Co-authored-by: brian-forte <brian.forte@tiny.cloud>

* Update 6.4.1-release-notes.adoc

* Update modules/ROOT/pages/6.4.2-release-notes.adoc

Co-authored-by: brian-forte <brian.forte@tiny.cloud>

* Typo correction.

---------

Co-authored-by: brian-forte <brian.forte@tiny.cloud>

--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -103,6 +103,15 @@ When the More toolbar button — … — was opened, and the, now-visible, float
 
 For this update this internal attribute has been removed and using the Tab key to activate floating toolbar icons progresses through these icons as expected.
 
+=== Redial would, in some circumstances, cause elements to not have an initial value selected when they should have.
+
+In previous versions of {productname}, the host browser did not properly manage switching child elements when the Accessibility Checker dialog was visible.
+
+As a consequence, the dropdown menu in this dialog would, in some circumstances, present without one of the dropdown menu’s options being selected by default.
+
+To fix this issue {productname} now populates the element with a default value, unless this menu is explicitly configured as empty by the particular {productname} instance’s configuration.
+
+NOTE: this change also addresses xref:6.4.1-release-notes.adoc#known-issues[a known issue] in the xref:a11ychecker.adoc[Accessibility Checker Premium plugin].
 
 // [[security-fixes]]
 // == Security fixes
