DOC-1971: Updates to  prior to  6.4.2.

--- a/modules/ROOT/moxiedoc_nav.adoc
+++ b/modules/ROOT/moxiedoc_nav.adoc
@@ -7,6 +7,7 @@
 *** xref:apis/tinymce.editormanager.adoc[tinymce.EditorManager]
 *** xref:apis/tinymce.editormode.adoc[tinymce.EditorMode]
 *** xref:apis/tinymce.editoroptions.adoc[tinymce.EditorOptions]
+*** xref:apis/tinymce.editorupload.adoc[tinymce.EditorUpload]
 *** xref:apis/tinymce.env.adoc[tinymce.Env]
 *** xref:apis/tinymce.event.adoc[tinymce.Event]
 *** xref:apis/tinymce.fakeclipboard.adoc[tinymce.FakeClipboard]
