--- a/modules/ROOT/pages/apis/tinymce.dom.selection.adoc
+++ b/modules/ROOT/pages/apis/tinymce.dom.selection.adoc
@@ -1,7 +1,7 @@
 = tinymce.dom.Selection
 :navtitle: tinymce.dom.Selection
 :description: This class handles text and control selection it&#x27;s an crossbrowser utility class. Consult the TinyMCE API Documentation for more details and examples on how to use this class.
-:keywords: Selection, collapse, expand, getBookmark, getContent, getEnd, getNode, getRng, getSel, getStart, isCollapsed, moveToBookmark, select, selectorChanged, setContent, setCursorLocation, setNode, setRng
+:keywords: Selection, collapse, expand, getBookmark, getContent, getEnd, getNode, getRng, getSel, getStart, isCollapsed, isEditable, moveToBookmark, select, selectorChanged, setContent, setCursorLocation, setNode, setRng
 :moxie-type: api
 
 This class handles text and control selection it's an crossbrowser utility class. Consult the TinyMCE API Documentation for more details and examples on how to use this class.
@@ -43,6 +43,7 @@ node the parent element will be returned.|`xref:apis/tinymce.dom.selection.adoc[
 |xref:#getStart[getStart()]|Returns the start element of a selection range. If the start is in a text
 node the parent element will be returned.|`xref:apis/tinymce.dom.selection.adoc[Selection]`
 |xref:#isCollapsed[isCollapsed()]|Returns true/false if the selection range is collapsed or not. Collapsed means if it's a caret or a larger selection.|`xref:apis/tinymce.dom.selection.adoc[Selection]`
+|xref:#isEditable[isEditable()]|Checks if the current selection’s start and end containers are editable within their parent’s contexts.|`xref:apis/tinymce.dom.selection.adoc[Selection]`
 |xref:#moveToBookmark[moveToBookmark()]|Restores the selection to the specified bookmark.|`xref:apis/tinymce.dom.selection.adoc[Selection]`
 |xref:#select[select()]|Selects the specified element. This will place the start and end of the selection range around the element.|`xref:apis/tinymce.dom.selection.adoc[Selection]`
 |xref:#selectorChanged[selectorChanged()]|Executes callback when the current selection starts/stops matching the specified selector. The current
@@ -264,6 +265,20 @@ Returns true/false if the selection range is collapsed or not. Collapsed means i
 
 * `Boolean` - true/false state if the selection range is collapsed or not.
 Collapsed means if it's a caret or a larger selection.
+
+'''
+
+[[isEditable]]
+=== isEditable()
+[source, javascript]
+----
+isEditable(): Boolean
+----
+Checks if the current selection’s start and end containers are editable within their parent’s contexts.
+
+==== Return value
+
+* `Boolean` - Will be true if the selection is editable and false if it's not editable.
 
 '''
 
