Copy-edit template text
Change a template string to a specific-to-this-release string.

--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -17,7 +17,7 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 [[bug-fixes]]
 == Bug fixes
 
-{productname} 6.4.2 also includes the following bug fixes:
+{productname} 6.4.2 includes the following bug fixes:
 
 
 === The `quickimage` toolbar button failed to insert images selected from the local computer when running on Google Chrome for macOS. 
