Set the More toolbar button proxy (ellipsis) bold.

--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -82,7 +82,7 @@ To fix this, instead of manually calculating the vertical and horizontal marker 
 
 In previous versions of {productname}, menu buttons were assigned an internal attribute.
 
-When the More toolbar button — … — was opened, and the, now-visible, floating toolbar contained a menu button, using the Tab key to navigate through the floating toolbar icons would, because of this attribute and in some circumstances, stop progressing through the toolbar and, sometimes, enter a selection loop.
+When the More toolbar button — *…* — was opened, and the, now-visible, floating toolbar contained a menu button, using the Tab key to navigate through the floating toolbar icons would, because of this attribute and in some circumstances, stop progressing through the toolbar and, sometimes, enter a selection loop.
 
 For this update this internal attribute has been removed and using the Tab key to activate floating toolbar icons progresses through these icons as expected.
 
