--- a/modules/ROOT/pages/apis/tinymce.dom.selection.adoc
+++ b/modules/ROOT/pages/apis/tinymce.dom.selection.adoc
@@ -1,7 +1,7 @@
 = tinymce.dom.Selection
 :navtitle: tinymce.dom.Selection
 :description: This class handles text and control selection it&#x27;s an crossbrowser utility class. Consult the TinyMCE API Documentation for more details and examples on how to use this class.
-:keywords: Selection, collapse, expand, getBookmark, getContent, getEnd, getNode, getRng, getSel, getStart, isCollapsed, isEditable, moveToBookmark, select, selectorChanged, setContent, setCursorLocation, setNode, setRng
+:keywords: Selection, collapse, expand, getBookmark, getContent, getEnd, getNode, getRng, getSel, getStart, isCollapsed, moveToBookmark, select, selectorChanged, setContent, setCursorLocation, setNode, setRng
 :moxie-type: api
 
 This class handles text and control selection it's an crossbrowser utility class. Consult the TinyMCE API Documentation for more details and examples on how to use this class.
